<resources>
    <string name="app_name">NEW_NAFLD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="text_version">Version 1.0.0</string>
    <string name="cd_image">Image</string>
    <string name="text_splash_heading">Non-alcoholic Fatty Liver Disease and Metabolic Syndrome</string>
    <string name="text_username">username</string>
    <string name="text_password">password</string>
    <string name="text_signin">LOGIN</string>
    <string name="text_termsconditions">Terms &amp; Conditions</string>
    <string name="text_nafldms">NAFLD &amp; MS</string>
    <string name="text_notices">Notices</string>
    <string name="text_dummy">Dummy</string>
    <string name="text_copyright">© 2014 Reed Elsevier India Private Limited. All rights reserved.</string>
    <string name="text_publication">No part of this publication may be reproduced or transmitted in any form or by any means, electronic or mechanical, including
photocopying, recording, or any information storage and retrieval system, without permission in writing from the Publisher.</string>
    <string name="text_notices_details">Knowledge and best practice in this field are constantly changing. As new research and experience broaden our understanding, changes in research methods, professional practices, or medical treatment may become necessary.
	    \n\nPractitioners and researchers must always rely on their own experience and knowledge in evaluating and using any information, methods, compounds, or experiments described herein. In using such information or methods they should be mindful of their own safety and the safety of others, including parties for whom they have a professional responsibility.
\n\nWith respect to any drug or pharmaceutical products identified, readers are advised to check the most current information provided (i) on procedures featured or (ii) by the manufacturer of each product to be administered, to verify the recommended dose or formula, the method and duration of administration, and contraindications. It is the responsibility of practitioners, relying on their own experience and knowledge of their patients, to make diagnoses, to determine dosages and the best treatment for each individual patient, and to take all appropriate safety precautions.
\n\nTo the fullest extent of the law, neither the Publisher nor the authors, contributors, or editors, assume any liability for any injury and/or damage to persons or property as a manner of products liability, negligence or otherwise, or from any use or operation of any methods, products, instructions, or ideas contained in the material herein.
\n\nAlthough all advertising material is expected to conform to ethical (medical) standards, inclusion in this publication does not constitute a guarantee or endorsement of the quality or value of such product or of the claims made of it by its manufacturer.
\n\n<b>Please consult full prescribing information before issuing prescription for any product mentioned in this publication.</b></string>
	<string name="copyright_details">A division of \n
Reed Elsevier India Private Limited. \n\n© 2014 Reed Elsevier India Private Limited. All rights reserved. \n\nNo part of this publication may be reproduced or transmitted in any form or by any means, electronic or mechanical, including
photocopying, recording, or any information storage and retrieval system, without permission in writing from the Publisher.</string>
    <string-array name="tabs_array">
        <item>Information</item>
        <item>NAFLD&amp;ms</item>
        <item>Algorithms</item>
        <item>Drugs</item>
        <item>Clinical Trials</item>
        <item>Appendix</item>
        <item>Case Studies</item>
    </string-array>
    <string-array name="informations_array">
        <item>Copyright</item>
        <item>Authors</item>
        <item>Societies</item>
    </string-array>
    <string-array name="drugs_array">
        <item>Ursodeoxycholic Acid</item>
        <item>Metformin</item>
        <item>Thiazolidinediones</item>
        <item>Antioxidants</item>
        <item>Pentoxifylline</item>
    </string-array>
    <string name="h2_Ursodeoxycholicacid">        Ursodeoxycholic acid is the non-hepatotoxic epimer of chenodeoxycholic acid. Ursodeoxycholic acid replaces endogenous bile acids, which are potential hepatotoxins, has membrane stabilizing and cytoprotective effects on mitochondria as well as immunological effects. 
It is believed that by decreasing bile acids, UDCA protects against hepatocyte injury and decreases oxidative stress in patients with NAFLD. Ursodeoxycholic acid has been used in the treatment of some hepatobiliary diseases for nearly two decades.</string>
    <string name="h2_metformin">In a randomized controlled study, when metformin was added to a lipid and calorie-restricted diet, it significantly reduced IR and mean hepatic aminotransferase levels, but no definite improvement was observed on liver histology. 
        These data were not confirmed in an observational, open-label study of 1 year of metformin treatment. Hepatic aminotransferase levels improved during the initial 3 months, along with improved insulin sensitivity, but then returned to pretreatment levels and histology did not change.</string>
    <string name="h2_thiazolidinediones">In a 1-year study by Pomrat et al, pioglitazone improved insulin sensitivity and hepatic aminotransferase levels, reduced liver size and hepatic fat content, and improved histology. 
        In another controlled study, all patients treated with pioglitazone and vitamin E had normalized hepatic aminotransferase levels, but interestingly this was also the case with patients treated with vitamin E alone. However, the combination therapy had more impact on histology as well as metabolic disturbances (hyperinsulinemia, IR, high FFA levels), and metabolic changes predicted the improvement in hepatic steatosis.</string>
    <string name="h2_antioxidants">Of all the anti-oxidant drugs, vitamin E (α-tocopherol) is the best studied and is recommended in nondiabetic patients with biopsy-proven NASH.
In a study by Lavin, vitamin E (400–1200 IU/day orally) was given for 4–10 months and led to a significant improvement in hepatic aminotransferases.
A study reported the results of treatment with α-tocopherol in children with NAFLD (The Treatment of Nonalcoholic Fatty Liver Disease in Children [TONIC] trial). But in the trial, it was observed that neither vitamin E nor metformin was superior to placebo in attaining the primary outcome of sustained reduction in ALT level in patients with pediatric NAFLD.</string>
    <string name="h2_pentoxifylline">Pentoxifylline is a methylxanthine compound inhibiting the production of cytokines (mainly tumor necrosis factor-α) involved in the pathogenesis of NASH. In a pilot study, Adams et al tested its effectiveness in NASH patients in 2004. Twenty patients of NASH were administered pentoxifylline for 12 months. It was observed that aminotransferase levels among patients with NASH96 improved but it also cautioned for more trials to overcome the side-effect profile. In a study conducted in India by Satapathy et al, nine patients (mean age 31.6 ± 7.2 years) of histologically proven.</string>
    <string-array name="naflds_array">
        <item>NEED FOR THE POSITION PAPER ON NON-ALCOHOLIC FATTY LIVER DISEASE AND METABOLIC SYNDROME FROM INDIA</item>
        <item>DEFINITIONS AND SPECTRUM</item>
        <item>PATHOGENESIS OF NON-ALCOHOLIC FATTY LIVER DISEASE</item>
        <item>DIAGNOSIS OF NON-ALCOHOLIC FATTY LIVER DISEASE</item>
        <item>TREATMENT OF PATIENTS WITH NON-ALCOHOLIC FATTY LIVER DISEASE</item>
        <item>CONCLUSION</item>
    </string-array>
    <string-array name="naflds_positionpaper_array">
        <item>Increasing Obesity, Hypertension, and Diabetes Mellitus</item>
        <item>Insulin Resistance and Other Risk Factors in Indians</item>
        <item>Non-alcoholic Fatty Liver Disease in India vis-a-vis Asian Data</item>
    </string-array>
    <string-array name="naflds_definitions_array">
        <item>Non-alcoholic Fatty Liver Disease</item>
        <item>Spectrum of Non-alcoholic Fatty Liver Disease</item>
    </string-array>
    <string-array name="naflds_pathogenesis_array">
        <item>Metabolic Syndrome</item>
        <item>Asia-Pacifi c/Indian Modifi cations for Metabolic Syndrome</item>
        <item>Association between Non-alcoholic Fatty Liver Disease and Metabolic Syndrome</item>
        <item>Insulin Resistance</item>
        <item>Other Pathogenic Mechanisms in Non-alcoholic Fatty Liver Disease</item>
    </string-array>
    <string-array name="naflds_diagonosis_array">
        <item>Diagnosis of Non-cirrhotic Non-alcoholic Fatty Liver Disease</item>
        <item>Diagnosis of Non-alcoholic Fatty Liver Disease-related Cirrhosis and Hepatocellular Carcinoma</item>
        <item>Cardiology and Endocrine Evaluation</item>
    </string-array>
    <string-array name="naflds_treatment_array">
        <item>Treatment of Non-cirrhotic Non-alcoholic Fatty Liver Disease</item>
        <item>Lifestyle Modifi cations/Weight Reduction</item>
        <item>Pharmacotherapy Therapy of Non-alcoholic Fatty Liver Disease</item>
        <item>Statin Use in Patients with Non-alcoholic Fatty Liver Disease</item>
        <item>Alcohol Use in Patients with Non-alcoholic Fatty Liver Disease</item>
        <item>Treatment of Non-alcoholic Fatty Liver Disease-related Cirrhosis and Hepatocellular Carcinoma</item>
        <item>Role of Cardiologists and Endocrinologists</item>
    </string-array>
    <string name="h2_increasing_obesity">Over the years, increasing obesity, hypertension, and diabetes mellitus has also led to higher incidence and prevalence of NAFLD in India.
        In India, the recent ICMR-INdiaDIABetes (ICMR-INDIAB) study reported the prevalence of DM (both known and newly diagnosed) in four regions of the country:10.4\u0025 in Tamil Nadu, 8.4\u0025 in Maharashtra, 5.3\u0025 in Jharkhand,and 13.6\u0025 in Chandigarh (Union Territory).
        The overall number of people with DM in India in 2011 based on this study was estimated to be 62.4million, and this was confi rmed by the Diabetes Atlas(5th edition) of the International Diabetes Federation(IDF), which gave a fi gure of 61.3 million people with DM in India in the age group of 20–79 years.
        Studies in India have shown an increasing trend in the prevalence of hypertension among urban adults: In Jaipur (1995), men 30\u0025 and women 33\u0025;in Mumbai (1999), men 44\u0025 and women 45\u0025; in Thiruvananthapuram (2000), men 31\u0025 and women 36\u0025; in Jaipur (2002), men 36\u0025 and women 37\u0025; in Chennai (2001), women 14\u0025.
        The Chennai Urban Rural Epidemiology Study (CURES) reported a prevalence of 23.2\u0025 HTN among men and 17.1\u0025 among women in South India.
        Hypertension is responsible for 57\u0025 of all stroke mortality and 24\u0025 of all coronary artery disease (CAD) mortality in India.
        The prevalence of obesity diff ers mostly by location, gender, and socio-economic stratum.
        Higher prevalence is seen in urban areas, more so in the higher socioeconomic stratum, and in women.
        Even though higher prevalence and rapidly increasing rate of obesity are seen in urban areas, rural-based Asian-Indians are also showing a growing trend of obesity.
        Increasing trend of overweight and obesity has been observed in children as well.</string>
    <string name="text_rememberme">Remember me</string>
    <string name="text_forgotpwd"><u>Forgot password?</u></string>
    <string name="text_create_account">New user? Register</string>
    <string name="text_name">name</string>
    <string name="text_email">email</string>
    <string name="text_submit">Submit</string>
</resources>