<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/items_vertical_margin"
            android:layout_marginLeft="@dimen/content_horizontal_margin"
            android:layout_marginRight="@dimen/content_horizontal_margin"
            android:layout_marginTop="@dimen/items_vertical_margin"
            android:text="@string/text_splash_heading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textview_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_publication"
            android:layout_marginBottom="@dimen/items_vertical_margin"
            android:layout_marginLeft="@dimen/content_horizontal_margin"
            android:layout_marginRight="@dimen/content_horizontal_margin"
            android:layout_marginTop="@dimen/items_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textview_notices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_background_color"
            android:paddingLeft="@dimen/items_horizontal_padding"
            android:text="@string/text_notices"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white_background_color"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/notices_rectangle_background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textview_noticedetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_vertical_margin"
                android:layout_marginLeft="@dimen/content_horizontal_margin"
                android:layout_marginRight="@dimen/content_horizontal_margin"
                android:layout_marginTop="@dimen/items_vertical_margin"
                android:text="@string/text_notices_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="serif" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
